CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

19 July 2007
+ Database
  o Small change on increment to prevent "column_name + -1". I don't think
    it matters but I prefer a cleaner approach with "column_name -1"
  o Also, if the increment amount is 0, function returns true.
+ version.php - increased to 1.3.0
+ Dropped config/core from subversion. Was a long time coming. Didn't
  need to have two sets of files.
+ Setup - Now copied the core/conf directory into config/core/
+ Conversion - patched category conversion with Eloi's fix (#1742987)
+ Updated files : conf/version.php

18 July 2007
+ Javascript:Ajax - Hopefully fixed some goofiness with the loadRequester


17 July 2007
+ Database - Fixed some error messages. wrong function named
+ Mail - added single and double quotes to allow characters
+ Key - Added a little code to strip a url from an link if sent by
        mistake



16 July 2007
+ Changed Editor and Form to default to normal text areas if the
  editor is missing.
+ Changed javascript calendar's default form to phpws_form

12 July 2007
+ Database
  o Added setLock, lockTables, and unlockTables functions. Factory
    files updated as well thought postgresql is untested.
  o Added fourth parameter to addColumn. Lets you perform single
    column counts
  o The reset function now cleans out the tables array leaving only
    the initial table
+ Added define to setup config.tpl turn off table lock ability for
  those that don't have those permissions.


5 July 2007
+ Fixed bug #1747940 - chnaged dbpager direction arrows.

2 July 2007
+ Added yet another mime type for FLV files to file_types.php

28 June 2007
+ Core - log error check failed if the file didn't exist. Fixed it.


27 June 2007
+ Core - Changed error messages for log file writing.
+ Editor - Added ability to set editor width and height
+ Form - changed to reflect width and height changes in Editor

+ Javascript